# crowsnet

./: .gitignore  CLAUDE.md  README.md  ansible.cfg  crowsnet.py  pyproject.toml
.claude/: settings.json
.claude/skills/git/: SKILL.md
.claude/skills/git/hooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  test.yml
ansible/: CLAUDE.md  physical.yml  virtual.yml
ansible/molecule/shared/: create.yml  destroy.yml  prepare.yml
ansible/roles/common/: README.md
ansible/roles/common/tasks/: packages.yml  users.yml
ansible/roles/dev/: README.md
ansible/roles/dev/tasks/: dev_packages.yml  dev_services.yml  main.yml
ansible/roles/dev/vars/: main.yml
ansible/roles/foundry/: README.md
ansible/roles/foundry/handlers/: main.yml
ansible/roles/foundry/tasks/: foundry_firewalld.yml  foundry_services.yml  foundry_users.yml  main.yml
ansible/roles/jellyfin/: README.md
ansible/roles/jupyter/: README.md
ansible/roles/microk8s/: README.md
ansible/roles/pbs/: README.md
ansible/roles/physical/: README.md
ansible/roles/podman/: README.md
ansible/roles/proxmox/: README.md
ansible/roles/proxy/: README.md
ansible/roles/public/: README.md
ansible/roles/public_ssh/: README.md
ansible/roles/sunshine/: README.md
ansible/roles/virtual/: README.md
docker/: Dockerfile  entrypoint.sh
pulumi/: __main__.py  components.py  vms.py
tests/: conftest.py  test_container.py  test_crowsnet.py  test_testing.py
tests/pulumi/: test_components.py  test_main.py
utilities/: container.py  testing.py
(+11 files in other folders)
