[project]
name = "ansible-crowsnet"
version = "0.2.0"
description = "Self-hosted homelab, runs entirely out of infrastructure-as-code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.6.0",
    "ansible-lint>=25.6.1",
    "click>=8.1.0",
    "molecule>=25.5.0",
    "molecule-plugins[vagrant]>=25.8.12",
    "pulumi>=3.220.0",
]
