[project]
name = "ansible-crowsnet"
version = "0.2.0"
description = "Self-hosted homelab, runs entirely out of infrastructure-as-code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible-core>=2.18.6",
    "click>=8.1.0",
    "pulumi>=3.220.0",
    "pulumi-proxmoxve>=7.13.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.6.1",
    "molecule>=25.5.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
